# rag-langchain-jina-chainlit

./: LICENSE  README.md  example.env  pyproject.toml  requirements.txt
assistant/: __init__.py  cli.py  ingest.py  rag.py
chainlit_app/: main.py
tests/: test_ingest.py  test_rag.py
